--- a/public/css/news2.css
+++ b/public/css/news2.css
@@ -262,10 +262,10 @@ a{text-decoration: none}
 	width: 94%;height:auto;margin:30px auto 0 auto;display: none;
 }
 .xiangguanVideoword{
-	width:100%;height:auto;border-bottom: 1px solid #e4e4e4;padding-bottom:7px ;
+	width:100%;height:auto;border-bottom: 1px solid #e4e4e4;padding-bottom:7px ;position: relative;
 }
 .xiangguanVideoword>span{
-	font-size: 12px;color: #666;border-bottom: 1px solid #e99b5e;padding-bottom:7px ;
+	font-size: 1.4rem;color: #666;border-bottom: 1px solid #e99b5e;padding-bottom:7px ;position: absolute;bottom:-1px;
 }
 .videoCardbox{
 	width: 100%;height:auto;;
@@ -278,7 +278,7 @@ a{text-decoration: none}
 	width: 58.7%;height:auto;float: left;
 }
 .videoDes{
-	width: 100%;height: auto;font-size: 16px;color: #333;line-height: 22px;
+	width: 100%;height: auto;font-size: 1.7rem;color: #333;line-height: 22px;
 }
 .videoFrom{
 	width: 100%;height: auto;margin-top:25px;font-size:12px;color: #999;
