--- a/public/css/news2.css
+++ b/public/css/news2.css
@@ -274,6 +274,9 @@ a{text-decoration: none}
 .videoCard{
 	width: 100%;height:auto;padding:18px 0 16px 0;border-bottom: 1px solid #e4e4e4;overflow: hidden;
 }
+.videoCard>a{
+	display: inline-block;width:100%;
+}
 .videoWord{
 	width: 58.7%;height:auto;float: left;
 }
